--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quiz-game",
   "version": "1.0.0",
-  "description": "A typescript quiz",
+  "description": "A typescript quiz of 7 questions with a secret prize in end.",
   "main": "index.js",
   "type": "module",
   "scripts": {
