fixed for public

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "A typescript quiz of 7 questions with a secret prize in end.",
   "main": "index.js",
+  "bin" : "index.js",
   "type": "module",
+  "publishConfig": {
+   "access": "public"
+ },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
